--- a/st.desktop
+++ b/st.desktop
@@ -2,7 +2,7 @@
 Name=st
 Comment=st is a simple terminal implementation for X
 Exec=st
-Icon=phyos-logo
+Icon=utilities-terminal
 Terminal=false
 Type=Application
 Categories=System;TerminalEmulator;
